<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/pangolin"
        android:text="@string/question"
        android:textColor="@color/black"
        android:textSize="56sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:fontFamily="@font/pangolin"
        android:hint="@string/wait_for_answer"
        android:textAlignment="center"
        android:textSize="24sp"
        android:autofillHints=""
        android:inputType="text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/black_button_background"
        android:fontFamily="@font/pangolin"
        android:paddingHorizontal="48dp"
        android:text="@string/send_answer"
        android:textSize="24sp" />

</LinearLayout>