<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/waitingListRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pangolin"
                android:paddingTop="16dp"
                android:text="@string/waiting_for_players"
                android:textColor="@color/black"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/gameCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pangolin"
                android:text="@string/game_code"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/waitingList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <Button
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="32dp"
        android:background="@drawable/black_button_background"
        android:fontFamily="@font/pangolin"
        android:text="@string/start_game"
        android:textSize="16sp" />

</FrameLayout>